Bug 1645762 - Don't treat image masks as invalid if painted at an unideal size. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D84110